--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Carrera Tidyverse. Preguntas Cortas.MARCELINO MARTINEZ"
 subtitle: Tratamiento de Datos. Grado en Ciencia de Datos- UV
-author: "Marcelino Martínez"
+author: "Victor Alvarez "
 date:  "`r Sys.Date()`"  #Pondría la fecha del día actual
 params:
   lang: ES
@@ -59,7 +59,7 @@ opts_chunk$set(echo=T,message = F, error = F, warning = F, comment = NA, fig.ali
 ```{r,echo=FALSE}
 
 library(pacman)
-p_load(dplyr,lubridate)
+p_load(dplyr,lubridate, tidyr,ggplot2, readr)
 
 ```
 
@@ -118,12 +118,13 @@ mydf %>% dim
 ```
 2. Para facilitar el manejo transforma los datos en un tibble `as_tibble` y almacena el resultado con el nombre `cran`, y borra el data frame original (usa `rm`)
 ```{r}
-
-
+cran<- as_tibble(mydf)
+rm(mydf)
 ```
 3. Una ventaja de trasformar en tibble es la visualización. Escribe directamente el nombre de la variable y observa la visualización. Posteriormente usa la función `glimpse` sobre `cran` y observa el resultado.
 ```{r}
-
+cran
+glimpse(cran)
 
 ```
 # dplyr
@@ -131,6 +132,7 @@ mydf %>% dim
 
 4. Elige únicamente las variables `ip_id, package, country`
 ```{r}
+select(cran, ip_id,package, country)
 
 ```
 5. Elige todas las variables entre `r_arch y country` 
