--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -137,12 +137,11 @@ select(cran, ip_id,package, country)
 ```
 5. Elige todas las variables entre `r_arch y country` 
 ```{r}
-
+cran[,5:9]
 ```
 5. Puedes usar el signo (-) para no coger una columna determinada. Selecciona todas las columnas menos las que están entre `date y size` 
 ```{r}
-
-
+select(cran, -date, -size)
 
 
 ```
