--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -173,7 +173,7 @@ cran %>%
 9. Elige aquellas descargas en las que la versión del sistema operativo no está vacía.
 ```{r}
 cran %>%
-  filter(is.na(version)==FALSE)
+  filter(is.na(version)==F)
 ```
 10. Almacena en `cran2` todas las columnas entre `size` y `ip_id`. 
 ```{r}
