--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -177,11 +177,14 @@ cran %>%
 ```
 10. Almacena en `cran2` todas las columnas entre `size` y `ip_id`. 
 ```{r}
+cran2<-cran %>%
+  select(size:ip_id)
 
 ```
 11. Ordena `cran2` en orden ascendente según la variable `ip_id`.
 ```{r}
-
+cran2 %>%
+  arrange(ip_id)
 ```
 12. Ordena `cran2` en orden descendente según la variable `ip_id`.
 ```{r}
