--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -259,8 +259,9 @@ elementos distintos,`n_distinct()` de la variables `ip_id y country`, y el
 la mediana (función `stats::median`) de la variable `size` y almacénalos en las variables `count, unique, countries y med_bytes` respectivamente. El resultado del sumario se almacenará en `pack_sum`.
 
 ```{r}
-
-
+pack_sum <-cran %>%
+  group_by(package)%>%
+  summary(count=n(), unique=n_distinct(ip_id),countries = n_distinct(country), avg_bytes = mean(size))
 
 
 
