--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -289,7 +289,9 @@ top_counts<-pack_sum %>%
 ```
 23. Repite el apartado anterior utilizando **pipes** para que finalmente el resultado se ordene, en orden descendente, según el número de descargas (`count`) y se almacene el la variable `top_counts_sorted`
 ```{r}
-
+top_counts_sorted<-pack_sum %>%
+  filter(count>quantile(count,probs=0.99, rm.na=T) ) %>%
+  arrange(count)
 
 
 
@@ -304,7 +306,9 @@ top_counts<-pack_sum %>%
 
 ```{r}
 
-
+top_counts_sorted<-pack_sum %>%
+  filter(unique>quantile(unique,probs=0.99, rm.na=T) ) %>%
+  arrange(unique)
 
 
 
