--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -319,7 +319,9 @@ top_counts_sorted<-pack_sum %>%
 25. Completa lo que se indica  usando `pipes`. Selecciona las columnas `ip_id, country, package, size` de `cran` y muestra el resultado por pantalla usando `print`. No es necesario almacenar.
 
 ```{r}
-
+cran %>%
+  select(ip_id, country, package, size) %>%
+  print()
 
 
 ```
@@ -327,7 +329,8 @@ top_counts_sorted<-pack_sum %>%
 26. Añade una columna llamada `size_mb` que contenga el tamaño de cada descarga en megabytes.
 
 ```{r}
-
+cran <- cran %>%
+  mutate(size, size_mb=size/2^20)
 
 
 ```
@@ -335,7 +338,8 @@ top_counts_sorted<-pack_sum %>%
 27. Selecciona aquellas descargas cuyo tamaño es menor o igual que 0.5 Mbytes
 ```{r}
 
-
+cran %>%
+  filter(size_mb <= 0.5)
 
 ```
 28. Repite el apartado anterior ordenando los resultados, en orden descendente según el tamaño en Megabytes y muéstralo por pantalla.
